--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE="mongodb+srv://adm:1001598@geral.xevvs.mongodb.net/Estoque?retryWrites=true&w=majority"
+DATABASE="mongodb+srv://carlos:1001598@geral.xevvs.mongodb.net/EstoqueDanni?retryWrites=true&w=majority"
