--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "danniApi",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.10.7"
+    "mongoose": "^5.10.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
